--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "license": "MIT",
   "dependencies": {
     "@cashu/cashu-ts": "^1.0.0",
+    "@noble/curves": "^2.0.1",
     "@noble/hashes": "^1.3.3",
     "@noble/secp256k1": "^2.0.0",
     "nostr-tools": "^2.0.0"
