--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,7 @@
-# Dependencies
-node_modules/
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-
-# Build outputs
-dist/
-build/
-*.tsbuildinfo
-
 # Rust
 target/
 **/*.rs.bk
 Cargo.lock
-
-# Testing
-coverage/
-.nyc_output/
 
 # Environment
 .env
@@ -35,10 +20,12 @@ coverage/
 # Logs
 logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Temp files
 tmp/
 temp/
+
+# Database
+*.db
+*.db-shm
+*.db-wal
