--- a/cashu-broker/Cargo.toml
+++ b/cashu-broker/Cargo.toml
@@ -53,6 +53,9 @@ chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 tokio-test = "0.4"
+tower = { version = "0.4", features = ["util"] }
+hyper = { version = "1.0", features = ["full"] }
+http-body-util = "0.1"
 
 [lib]
 name = "cashu_broker"
